--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "mongodb": "^6.14.2",
+    "mongoose": "^8.12.1",
     "next": "15.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
